<resources>
    <string name="app_name">Helper SecureTech</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome">Benvenuto</string>
    <string name="login">Login</string>
    <string name="inserisci_username">Inserisci username:</string>
    <string name="inserisci_password">Inserisci password:</string>
    <string name="registrati">Registrati</string>
    <string name="nome">Nome:</string>
    <string name="cognome">Cognome:</string>
    <string name="eta">Eta:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="aggiungi_una_nota">Aggiungi una nota</string>
    <string name="inserisci_la_tua_nota">Inserisci la tua nota</string>
    <string name="cancella_nota">cancella nota</string>
    <string name="salva_nota">salva nota</string>
    <string name="cancella">Cancella</string>
    <string name="annulla">Annulla</string>
    <string name="messaggi_sviluppatore">Messaggi Sviluppatore</string>
    <string name="acquisti">Acquisti</string>
    <string name="register">Register</string>
    <string name="acquista_pacchetto">Acquista Pacchetto</string>
    <string name="indietro">Indietro</string>
    <string name="benvenuto">Benvenuto!</string>
    <string name="gestione_sviluppatori">Gestione Sviluppatori</string>
    <string name="gestione_clienti">Gestione Clienti</string>
    <string name="gestione_pacchetti">Gestione Pacchetti</string>
    <string name="pacchetti_disponibili">PACCHETTI \n DISPONIBILI</string>
    <string name="numero_acquisti">NUMERO ACQUISTI</string>
    <string name="data_della_nota">Data della nota</string>
    <string name="contenuto_della_nota">Contenuto della nota</string>
    <string name="Indietro">Indietro</string>
    <string name="Gestione_clienti">Gestione Clienti</string>
    <string name="aggiungi_cliente">Aggiungi Cliente</string>
    <string name="salva">Salva</string>
    <string name="i_miei_dati">I Miei Dati</string>
    <string name="Annulla">Annulla</string>
    <string name="gestione_pacchettI">Gestione Pacchetti</string>
    <string name="aggiungi_pacchetto">Aggiungi Pacchetto</string>
    <string name="modifica_pacchetto">Modifica Pacchetto</string>
    <string name="elimina_pacchetto">Elimina Pacchetto</string>
    <string name="aggiungi_sviluppatore">Aggiungi Sviluppatore</string>
    <string name="modifica_sviluppatore">Modifica Sviluppatore</string>
    <string name="mostra_nascondi_calendario">Mostra/Nascondi Calendario</string>
    <string name="i_tuoi_preferiti">I Tuoi Preferiti:</string>
    <string name="la_community_consiglia">La Community Consiglia:</string>
    <string name="i_tuoi_pacchetti">I tuoi Pacchetti</string>
    <string name="nessuna_richiesta_trovata">Nessuna richiesta trovata</string>
    <string name="nota">NOTA</string>
    <string name="Salva">SALVA</string>
    <string name="textview">TextView</string>
    <string name="modifica">modifica</string>
    <string name="esci">esci</string>
    <string name="Data_della_nota">Data della nota</string>
    <string name="Contenuto_della_nota">Contenuto della nota</string>
    <string name="chiudi">Chiudi</string>
    <string name="nome_cliente">Nome Cliente</string>
    <string name="email">Email</string>
    <string name="pacchetti_0">Pacchetti: 0</string>
    <string name="nome_pacchetto">Nome pacchetto</string>
    <string name="descrizione_pacchetto">Descrizione pacchetto</string>
    <string name="_0_00">€0.00</string>
    <string name="acquista">Acquista</string>
    <string name="richiesta_del_cliente">Richiesta del cliente...</string>
    <string name="risposta_dello_sviluppatore">Risposta dello sviluppatore...</string>
    <string name="_10_12_2024">10/12/2024</string>
    <string name="stato_in_attesa">Stato: In Attesa</string>
    <string name="nome_pacchettO">Nome pacchetto</string>
    <string name="maggiori_info">maggiori info</string>
    <string name="nome_sviluppatore">Nome Sviluppatore</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="passworD">Password</string>
    <string name="phone">Phone</string>
    <string name="surname">Surname</string>
    <string name="Email">Email</string>
    <string name="inserisci_email">Inserisci Email:</string>
    <string name="emaIl">Email:</string>
    <string name="cerca_richiesta">Cerca richiesta...</string>
    <string name="Nome">Nome</string>
    <string name="Cognome">Cognome</string>
    <string name="telefono">Telefono</string>
    <string name="azienda">Azienda</string>
    <string name="tipo">Tipo</string>
    <string name="testo_della_nota">Testo della nota</string>
    <string name="Nome_pacchetto">Nome Pacchetto</string>
    <string name="descrizione">Descrizione</string>
    <string name="prezzo">Prezzo</string>
    <string name="durata">Durata</string>
    <string name="componente_hardware">Componente Hardware</string>
    <string name="componente_software">Componente Software</string>
    <string name="nOmE">Nome</string>
    <string name="COgnome">Cognome</string>
    <string name="EMail">Email</string>
    <string name="ruolo">Ruolo</string>
    <string name="livello">Livello</string>
    <string name="progetti">Progetti</string>
    <string name="nome_pacchetTO">Nome Pacchetto</string>
    <string name="prezzo_pacchetto">Prezzo Pacchetto</string>
    <string name="permesso_di_localizzazione_non_concesso">Permesso di localizzazione non concesso</string>
    <string name="inserire_almeno_username_e_password">Inserire almeno username e password</string>
    <string name="inserire_un_email_valida">Inserire un\'email valida</string>
    <string name="registrazione_gi_esistente">Registrazione già esistente</string>
    <string name="dati_inseriti_con_successo">Dati inseriti con successo</string>
    <string name="conferma_eliminazione">Conferma Eliminazione</string>
    <string name="vuoi_eliminare_il_pacchetto">Vuoi eliminare il pacchetto \"%1$s\"?</string>
    <string name="elimina">Elimina</string>
    <string name="pacchetto_eliminato">Pacchetto eliminato</string>
    <string name="ANnulla">Annulla</string>
    <string name="nessun_pacchetto_selezionato">Nessun pacchetto selezionato</string>
    <string name="pacchetto_aggiunto">Pacchetto aggiunto</string>
    <string name="AnNulla">Annulla</string>
    <string name="selezionato">Selezionato: %1$s</string>
    <string name="seleziona_un_pacchetto_da_modificare">Seleziona un pacchetto da modificare</string>
    <string name="Selezionato">Selezionato: %1$s</string>
    <string name="seleziona_uno_sviluppatore_da_modificare">Seleziona uno sviluppatore da modificare</string>
    <string name="sviluppatore_aggiunto">Sviluppatore aggiunto</string>
    <string name="compila_tutti_i_campi">Compila tutti i campi</string>
    <string name="sviluppatore_modificato">Sviluppatore modificato</string>
    <string name="compila_tutti_i_campI">Compila tutti i campi</string>
    <string name="acquisto_andato_a_buon_fine">Acquisto andato a buon fine</string>
    <string name="errore_nessun_cliente_caricato">Errore: Nessun cliente caricato</string>
    <string name="dati_aggiornati_con_successo">Dati aggiornati con successo</string>
    <string name="errore_utente_non_trovato">Errore: Utente non trovato</string>
    <string name="errore_email_non_trovata">Errore: Email non trovata</string>
    <string name="nessun_dato_da_ripristinare">Nessun dato da ripristinare</string>
    <string name="dati_aggiornati_con_succesSO">Dati aggiornati con successo!</string>
    <string name="errore_nell_aggiornamento">Errore nell\'aggiornamento</string>
    <string name="nota_salvata_per_il">Nota salvata per il %1$s</string>
    <string name="nota_eliminata">Nota eliminata</string>
    <string name="tipo_di_utente_sconosciuto">Tipo di utente sconosciuto</string>
    <string name="username_o_password_errati">Username o password errati</string>
    <string name="server_aziendale_firewall_dedicato">Server aziendale + Firewall dedicato</string>
    <string name="sicurezza_totale_gestione_centralizzata">Sicurezza totale + Gestione centralizzata</string>
    <string name="un_pacchetto_su_misura_per_grandi_imprese">Un pacchetto su misura per grandi imprese.</string>
    <string name="pacchetto_enterprise">Pacchetto Enterprise</string>
    <string name="antivirus_base_protezione_dati">Antivirus base + Protezione dati</string>
    <string name="modem_router">Modem router</string>
    <string name="un_pacchetto_per_chi_lavora_da_casa">Un pacchetto per chi lavora da casa.</string>
    <string name="pacchetto_home_office">Pacchetto Home Office</string>
    <string name="gestione_della_rete_antivirus">Gestione della rete + Antivirus</string>
    <string name="router_base">Router base</string>
    <string name="un_pacchetto_pensato_per_startup_e_nuove_attivit">Un pacchetto pensato per startup e nuove attività.</string>
    <string name="pacchetto_startup">Pacchetto Startup</string>
    <string name="suite_completa_di_sicurezza_informatica">Suite completa di sicurezza informatica</string>
    <string name="server_dedicato_router_di_alta_gamma">Server dedicato + Router di alta gamma</string>
    <string name="un_pacchetto_premium_per_grandi_aziende">Un pacchetto premium per grandi aziende.</string>
    <string name="pacchetto_premium">Pacchetto Premium</string>
    <string name="antivirus_avanzato_gestione_della_rete">Antivirus avanzato + Gestione della rete</string>
    <string name="router_avanzato_firewall">Router avanzato + Firewall</string>
    <string name="un_pacchetto_avanzato_per_medie_imprese">Un pacchetto avanzato per medie imprese.</string>
    <string name="pacchetto_avanzato">Pacchetto Avanzato</string>
    <string name="antivirus_standard">Antivirus standard</string>
    <string name="router_di_base">Router di base</string>
    <string name="un_pacchetto_base_per_piccole_aziende">Un pacchetto base per piccole aziende.</string>
    <string name="pacchetto_base">Pacchetto Base</string>
    <string name="nota_di_prova">nota di prova</string>
    <string name="CLIente">cliente</string>
    <string name="responsabile_consegne_digitali">Responsabile consegne digitali</string>
    <string name="progetto_a_progetto_b">Progetto A, Progetto B</string>
    <string name="SVILUppatore">sviluppatore</string>
    <string name="analista">Analista</string>
    <string name="admin">admin</string>
    <string name="sei_qui">Sei qui!</string>
    <string name="sede_securetech_vicina">Sede SecureTech vicina</string>
    <string name="securetech">SecureTech</string>
    <string name="ciao">Ciao %1$s!</string>
    <string name="nota_per_il">Nota per il %1$s</string>
    <string name="benvenuTO">Benvenuto, %1$s!</string>
    <string name="aggiungi_clienTE">Aggiungi Cliente</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="annuLLa">Annulla</string>
    <string name="modifica_pacchettO">Modifica Pacchetto</string>
    <string name="salVaa">Salva</string>
    <string name="annullaa">Annulla</string>
    <string name="logiNN">Login</string>
    <string name="mappa">Mappa</string>
    <string name="lingua">Lingua</string>
</resources>