<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Cliente.Activity.DettagliNotaActivity">

    <!-- Data della nota -->
    <TextView
        android:id="@+id/txtDataNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_della_nota"
        android:textSize="14sp"
        android:textColor="@color/oxford_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Contenuto della nota -->
    <TextView
        android:id="@+id/txtNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contenuto_della_nota"
        android:textSize="16sp"
        android:textColor="@color/platinum"
        app:layout_constraintTop_toBottomOf="@id/txtDataNota"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"/>

    <!-- Pulsante indietro -->
    <Button
        android:id="@+id/btnIndietro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Indietro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
