<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/wave_shape"
        android:textAlignment="center" android:id="@+id/CSL">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="342dp"
            android:layout_height="640dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txView" app:layout_constraintBottom_toBottomOf="parent"
            android:paddingBottom="0dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="41dp"
            android:layout_marginEnd="41dp" app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/pacchetti_disponibili"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_weight="1"
                    android:paddingLeft="10dp"/>
            <TextView
                    android:text="@string/numero_acquisti"
                    android:layout_width="206dp"
                    android:id="@+id/textView3" android:layout_weight="1"
                    android:paddingLeft="110dp" android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout"
                android:layout_marginBottom="28dp"
                android:layout_marginEnd="43dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp">
            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/lista"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
            android:id="@+id/txView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/platinum"
            android:textSize="36sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />


</androidx.constraintlayout.widget.ConstraintLayout>
